--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
 *{
-    margin: 10px;
+    margin: 0px;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
 }
 
+ 
+body{
+    background-image: url("/troca_de_imagem_input/img/fundo5.png");
+    background-repeat: no-repeat;
+    background-size:cover;
+    margin: 0px;
+    padding: 0px;
+    color: aliceblue;
+}
+
+
+#margem{
+    margin :20px;
+}
